# WinOS

./: .gitignore  Cargo.toml  entitlements.plist
.claude/: settings.local.json
crates/winemu-cli/: Cargo.toml
crates/winemu-cli/src/: main.rs
crates/winemu-hypervisor/: Cargo.toml  build.rs
crates/winemu-hypervisor/src/: lib.rs  types.rs
crates/winemu-hypervisor/src/hvf/: ffi.rs  mod.rs  timer.rs  vcpu.rs  vm.rs
crates/winemu-hypervisor/src/kvm/: mod.rs  vcpu.rs  vm.rs
crates/winemu-vmm/: Cargo.toml
crates/winemu-vmm/src/: dll.rs  file_io.rs  gpa_alloc.rs  host_file.rs  lib.rs  memory.rs  phys.rs  section.rs  syscall.rs  vaspace.rs  vcpu.rs
crates/winemu-vmm/src/debugger/: breakpoint.rs  controller.rs  gdb_remote.rs  memory.rs  mod.rs  server.rs  symbol.rs  translate.rs  types.rs
crates/winemu-vmm/src/debugger/controller/: access.rs  breakpoints.rs  formatting.rs  mod.rs  pause.rs  registers.rs  snapshot.rs
crates/winemu-vmm/src/hostcall/: broker.rs  handlers.rs  mod.rs  registry.rs  tests.rs  types.rs
crates/winemu-vmm/src/hostcall/modules/: mod.rs
crates/winemu-vmm/src/hostcall/modules/file_io/: mod.rs
crates/winemu-vmm/src/hostcall/modules/win32k/: mod.rs  state.rs
crates/winemu-vmm/src/hypercall/: mod.rs
crates/winemu-vmm/src/sched/: mod.rs  sync.rs  wait.rs
crates/winemu-vmm/src/syscall/: file.rs  memory.rs  object.rs  process.rs  registry.rs  section.rs  sync.rs  thread.rs
crates/winemu-vmm/tests/: p1_boot.rs
docs/: arch-backend-contract.md  architecture-split.md  architecture.md  cpuz-shell32-reuse-plan.md  cpuz-syscall-gap-static-analysis.md  debug-mmu-ldxr.md  hostcall-ipc-design.md  hostcall-wakeup-improvement-plan.md  hvf-guest-kernel-debugger-plan.md  implementation-plan.md  kernel-boot-smp-scheduler-refactor-plan.md  kernel-kva-plan.md  kernel-phy-map.md  (+19 more)
tests/debugger_interrupt_test/: Cargo.toml
tests/debugger_interrupt_test/.cargo/: config.toml
tests/debugger_interrupt_test/src/: main.rs
winemu-kernel/: Cargo.toml  link.ld
winemu-kernel/src/: alloc.rs  dll.rs  hostcall.rs  kobj.rs  ldr.rs  log.rs  main.rs  spin.rs  syscall.rs  teb.rs  timer.rs  vectors.rs
winemu-kernel/src/arch/: context.rs  context_types.rs  contract.rs  cpu.rs  hypercall.rs  mmu.rs  mod.rs  spin.rs  timer.rs  trap.rs  trap_frame.rs  vectors.rs
winemu-kernel/src/arch/aarch64/: boot.rs  context.rs  cpu.rs  hypercall.rs  mmu.rs  mod.rs  spin.rs  timer.rs  trap.rs  vectors.rs
winemu-kernel/src/arch/x86_64/: boot.rs  context.rs  cpu.rs  hypercall.rs  mmu.rs  mod.rs  spin.rs  timer.rs  trap.rs  vectors.rs
winemu-kernel/src/fs/: async_io.rs  backing.rs  bootstrap.rs  device.rs  dir.rs  file.rs  mod.rs  namespace.rs  notify.rs  object.rs  pager.rs  path.rs  types.rs  volume.rs
winemu-kernel/src/fs/devfs/: mod.rs  winemu_host.rs
winemu-kernel/src/fs/hostfs/: mod.rs
winemu-kernel/src/hypercall/: hostcall.rs  mod.rs
winemu-kernel/src/mm/: addr.rs  address_space.rs  areaset.rs  clone_plan.rs  kernel_vm.rs  kmalloc.rs  kmap.rs  mod.rs  page_table_access.rs  phys.rs  physmap.rs  process_vm.rs  range.rs  usercopy.rs  vaspace.rs  vm_area.rs  vm_defs.rs
winemu-kernel/src/nt/: common.rs  constants.rs  dispatch.rs  file.rs  kobject.rs  loader.rs  memory.rs  mod.rs  named_objects.rs  object.rs  path.rs  process.rs  registry.rs  section.rs  state.rs  status.rs  sync.rs  sysno.rs  sysno_table.rs  system.rs  thread.rs  token.rs  trap_carrier.rs  trap_schedule.rs  user_args.rs  win32k.rs
winemu-kernel/src/process/: address_space.rs  handle.rs  handle_table.rs  lifecycle.rs  mod.rs  query.rs  set.rs
winemu-kernel/src/sched/: config.rs  context.rs  continuation.rs  cpu.rs  dispatch.rs  global.rs  lock.rs  mod.rs  priority_queue.rs  queue.rs  ready.rs  resched.rs  schedule.rs  sync.rs  thread_context.rs  thread_control.rs  thread_store.rs  threads.rs  topology.rs  types.rs  wait.rs
winemu-kernel/src/sched/sync/: handles.rs  legacy_handles.rs  mod.rs  primitives_api.rs  state.rs  wait_path.rs  wait_queue.rs
(+171 files in other folders)
