[package]
name = "winemu-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "winemu"
path = "src/main.rs"

[dependencies]
winemu-core = { path = "../winemu-core" }
winemu-hypervisor = { path = "../winemu-hypervisor" }
winemu-vmm = { path = "../winemu-vmm" }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
winit = { version = "0.30", features = ["rwh_06"] }

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3.1"
objc2-app-kit = { version = "0.2.2", features = ["NSApplication", "NSEvent"] }
objc2-foundation = { version = "0.2.2", features = ["NSGeometry"] }
